# me155c_ece147c

./: .gitignore  Copy_of_Controller.rt-win64  Copy_of_Controller.slxc  project1.fdb_latexmk  project1.fls  project1.tex
Final_v2/: CL_modelid.rt-win64  CL_modelid.slxc  Copy_of_Controller.rt-win64  Copy_of_Controller.slxc  analysis.ipynb  final.tex  pyproject.toml
Final_v2/CL_modelid_quarc_win64/: CL_modelid.bat  CL_modelid.c  CL_modelid.h  CL_modelid.mk  CL_modelid.rsp  CL_modelid_comp.rsp  CL_modelid_data.c  CL_modelid_dt.h  CL_modelid_main.c  CL_modelid_private.h  CL_modelid_targ_data_map.m  CL_modelid_types.h  buildInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
Final_v2/Copy_of_Controller_quarc_win64/: Copy_of_Controller.c  Copy_of_Controller.h  Copy_of_Controller.mk  Copy_of_Controller_comp.rsp  Copy_of_Controller_data.c  Copy_of_Controller_dt.h  Copy_of_Controller_main.c  Copy_of_Controller_private.h  Copy_of_Controller_targ_data_map.m  Copy_of_Controller_types.h  buildInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
Final_v2/analysis/: Copy_of_Controller.rt-win64  Copy_of_Controller.slxc  control.m  lqg_a.m  lqr_a.m  model.mat  modeler.m
Final_v2/control/: CL_modelid.slx  CLsweep.m  modelerCL.asv  (+2 more)
(+573 files in other folders)
